# mactools

./: Main.hs  README.md  install.sh  mactools.cabal  tools.adoc  tools.yaml
script/: Main.hs  bootstrap.sh  install.sh
