name:                mactools
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
-- homepage:            http://github.com/githubuser/mactool-stack#readme
-- license:             BSD3
-- license-file:        LICENSE
author:              Justus Adam
maintainer:          dev@justus.science
-- copyright:           2010 Author Here
-- category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


executable mactools
  hs-source-dirs:      script
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , process
                     , directory
                     , filepath
                     , text
                     , yaml
  default-language:    Haskell2010

-- source-repository head
--   type:     git
--   location: https://github.com/githubuser/mactool-stack
