name:                mactools
version:             0.1
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/mactools#readme
license:             MIT
license-file:        LICENSE
author:              Justus Adam
maintainer:          dev@justus.science
copyright:           2015, 2016 Justus Adam
-- category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


executable mactools
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , process
                     , directory
                     , filepath
                     , text
                     , yaml
  default-language:    Haskell2010

